--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-yadayaha
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to my Page</h1>
+    <p>This is a simple text placeholder to prove the site is working.</p>
+</body>
+</html>
